--- a/pages/disc/disc02.yml
+++ b/pages/disc/disc02.yml
@@ -5,5 +5,13 @@ context: >
   Solutions will be made available after all discussion sections have concluded. You don't need to submit your answers anywhere.<br><br><b>Note: We do not plan to cover all problems here in the live discussion section</b>; the problems we don't cover can be used for extra practice.
 show_solution: false
 problems:
-  - disc02/dsc80-wi24-mid-13-14
-  - disc02/dsc10-fa23-quiz1-3
+# Earlier problems
+  - disc02/dsc10-fa23-quiz1-3 #p1
+  - disc02/dsc10-wn22-mid-7 #p2
+  - disc02/dsc80-wi24-mid-13-14 #p3
+  - disc02/dsc80-wi23-mid-1 #p4
+
+# Later problems
+  - disc02/dsc10-fa23-quiz2-5 #p5
+  - disc02/dsc10-fa23-quiz1-2 #p6
+  - disc02/dsc10-sp23-mid-8 #p7
