--- a/pages/disc/disc03.yml
+++ b/pages/disc/disc03.yml
@@ -9,7 +9,8 @@ problems:
   - disc03/dsc80-wi23-mid-3 #p1
   - disc03/dsc10-wi24-quiz2-5 # p2
   - disc03/dsc10-disc3-4 #p3
-  - disc03/dsc10-wi21-final-5 #p4
+  - disc03/dsc80-sp24-midterm-1 # p4
+  # - disc03/dsc10-wi21-final-5 #p4
   - disc03/dsc10-fa23-quiz2-2 # p5
   - disc03/dsc10-fa21-midterm-5 #p6
   - disc03/dsc10-sp23-midterm-5 #p7
