--- a/pages/review/mt-review-tuesday.yml
+++ b/pages/review/mt-review-tuesday.yml
@@ -1,8 +1,8 @@
-title: "Midterm Review: Tuesday"
+title: "Midterm Review: TF-IDF and Merging"
 context: >
   The problems in this worksheet are taken from past exams in similar classes. Work on them **on paper**, since the exams you take in this course will also be on paper. 
-  <br><br>We encourage you to complete this worksheet in a live discussion section. 
-  Solutions will be made available after all discussion sections have concluded. You don't need to submit your answers anywhere.<br><br><b>Note: We do not plan to cover all problems here in the live discussion section</b>; the problems we don't cover can be used for extra practice.
+  <br><br>We encourage you to attempt these problems **before** Tuesday's exam review session, so that we have enough time to walk through the solutions to all of the problems.
+  <br><br>We will enable the solutions here after the review session, though you can find the written solutions to these problems in other discussion worksheets.
 show_solution: false
 problems:
   # Problems
