--- a/pages/disc/disc10.yml
+++ b/pages/disc/disc10.yml
@@ -1,9 +1,20 @@
-title: "TODO"
+title: Generalization, Cross-Validation, and Regularization
 context: >
   The problems in this worksheet are taken from past exams in similar classes. Work on them **on paper**, since the exams you take in this course will also be on paper. 
   <br><br>We encourage you to complete this worksheet in a live discussion section. 
   Solutions will be made available after all discussion sections have concluded. You don't need to submit your answers anywhere.<br><br><b>Note: We do not plan to cover all problems here in the live discussion section</b>; the problems we don't cover can be used for extra practice.
 show_solution: false
 problems:
-  - disc09/wi23-final-q09 # q11 from last week
+  - disc10/wi24-final-q12
+  - disc10/fa23-final-q09 
+  - disc10/fa23-final-q10
+
+  - disc10/su20-midterm-q03
+  - disc10/su20-midterm-q04
+
+  - disc10/wi23-final-q08 # added content of disc10/wi23-final-data-info to it
+  - disc10/wi23-final-q09 
+  - disc10/wi23-final-q07 
+
+  - disc10/sp22-final-q11
 
