--- a/pages/disc/disc12.yml
+++ b/pages/disc/disc12.yml
@@ -1,10 +1,18 @@
-title: TODO
+title: disc12
 context: >
   The problems in this worksheet are taken from past exams in similar classes. Work on them **on paper**, since the exams you take in this course will also be on paper. 
   <br><br>We encourage you to complete this worksheet in a live discussion section. 
   Solutions will be made available after all discussion sections have concluded. You don't need to submit your answers anywhere.<br><br><b>Note: We do not plan to cover all problems here in the live discussion section</b>; the problems we don't cover can be used for extra practice.
 show_solution: true
 problems:
-  - disc10/fa23-final-q10 # 3
-  - disc10/wi23-final-q07 # 8
-
+  - disc12/fa23-final-q06
+  - disc12/su20_disc_q4
+  - disc12/sp22-final-q11
+  - disc12/sp22-final-q12
+  - disc12/sp23-final-q02
+  - disc12/sp24-final-q11
+  - disc12/sp24-final-q13
+  - disc12/wi23-final-q07
+  - disc12/wi23-final-q08
+  - disc12/wi24-final-q09
+  - disc12/fa22-final-q08
