minor edits to fa24 final sols

--- a/pages/exams/fa24-final.yml
+++ b/pages/exams/fa24-final.yml
@@ -2,9 +2,11 @@ title: "Fall 2024 Final Exam"
 instructors: Suraj Rampure
 context: >
   This exam was administered in-person. The exam was closed-notes, except students were allowed to bring two double-sided notes sheets. No calculators were allowed. Students had 120 minutes to take this exam.
-  <br><br>Access the original exam PDF <a href="../assets/pdf/fa24-final.pdf"><b>here</b></a>. 
+  <br><br>Access the original exam PDF <a href="../assets/pdf/fa24-final.pdf">here</a>. 
 
-  **Note**: Questions 1-6 were used for 'midterm redemption', which during the F24 semester allowed students to improve their midterm grade. Starting W25, final exam questions will look more like questions 7-15. 
+  <br>
+
+  **Note**: Questions 1-6 were used for "Midterm Redemption", which during the Fall 2024 semester allowed students to improve their midterm grade. **Starting in Winter 2025, there is no redemption policy, Starting Winter 2025, and Final Exam questions will look more like Questions 7-15**. 
 show_solution: true 
 data_info: fa24-final/data-info
 problems:
