--- a/pages/disc/disc02.yml
+++ b/pages/disc/disc02.yml
@@ -1,15 +1,17 @@
-title: "Arrays and DataFrames"
+title: "Arrays and Probability"
 context: >
   The problems in this worksheet are taken from past exams in similar classes. Work on them **on paper**, since the exams you take in this course will also be on paper. 
   <br><br>We encourage you to complete this worksheet in a live discussion section. 
   Solutions will be made available after all discussion sections have concluded. You don't need to submit your answers anywhere.<br><br><b>Note: We do not plan to cover all problems here in the live discussion section</b>; the problems we don't cover can be used for extra practice.
-show_solution: false
+show_solution: true
 problems:
   # Earlier problems
   - disc02/dsc10-fa23-quiz1-3 #p1
-  - disc02/dsc10-wn22-mid-7 #p2
-  - disc02/dsc10-wi24-quiz1-03 #p3
-  - disc02/dsc10-wi24-quiz1-02 #p4
-  - disc02/dsc10-fa23-quiz2-5 #p5
-  - disc02/dsc10-fa23-quiz1-2 #p6
-  - disc02/dsc10-sp23-mid-8 #p7
+  - disc02/sp22-mid-q12 #p2
+  - disc02/dsc10-su24-mid-q02 #p3
+  - disc02/dsc10-fa23-quiz2-5 #p4
+  - disc02/dsc10-su24-final-q08 #p5
+  - disc02/dsc10-wn22-mid-7 #p6
+  - disc02/dsc10-wi24-quiz1-03 #p7
+  - disc02/dsc10-fa23-quiz1-2 #p8
+  - disc02/dsc10-sp23-mid-8 #p9
