--- a/pages/disc/disc03_old.yml
+++ b/pages/disc/disc03_old.yml
@@ -1,13 +1,23 @@
-title: "DataFrames and Querying"
+title: "Grouping, Pivoting, and Merging"
 context: >
   The problems in this worksheet are taken from past exams in similar classes. Work on them **on paper**, since the exams you take in this course will also be on paper. 
   <br><br>We encourage you to complete this worksheet in a live discussion section. 
   Solutions will be made available after all discussion sections have concluded. You don't need to submit your answers anywhere.<br><br><b>Note: We do not plan to cover all problems here in the live discussion section</b>; the problems we don't cover can be used for extra practice.
-show_solution: false
+show_solution: true
 problems:
-  - disc03/dsc80-wi24-mid-13-14
+  # Earlier problems
   - disc03/dsc80-wi23-mid-3 #p1
-  - disc03/q1-intro-copy-disc02 #p2
-  - disc03/fa23-mid-q01
-  - disc03/q4-employee-database #p3
-  - disc03/q2-sports #p4
+  - disc03/dsc10-wi24-quiz2-5 # p2
+  - disc03/dsc10-disc3-4 #p3
+  - disc03/dsc80-sp24-midterm-1 # p4
+  # - disc03/dsc10-wi21-final-5 #p4
+  - disc03/dsc10-fa23-quiz2-2 # p5
+  - disc03/dsc10-fa21-midterm-5 #p6
+  - disc03/dsc10-sp23-midterm-5 #p7
+  - disc03/dsc80-sp22-midterm-7 #p8
+  - disc03/dsc80-wi24-midterm-5 #p9
+
+  # Later problems
+  - disc03/dsc80-wi23-midterm-6 #p10
+  - disc03/dsc10-wi24-quiz3-3 #p11
+  - disc03/dsc80-wi23-midterm-5 #p12
