--- a/pages/disc/disc03.yml
+++ b/pages/disc/disc03.yml
@@ -3,11 +3,9 @@ context: >
   The problems in this worksheet are taken from past exams in similar classes. Work on them **on paper**, since the exams you take in this course will also be on paper. 
   <br><br>We encourage you to complete this worksheet in a live discussion section. 
   Solutions will be made available after all discussion sections have concluded. You don't need to submit your answers anywhere.<br><br><b>Note: We do not plan to cover all problems here in the live discussion section</b>; the problems we don't cover can be used for extra practice.
-show_solution: false
+show_solution: true
 problems:
   - disc03/dsc80-wi24-mid-13-14
   - disc03/dsc80-wi23-mid-3 #p1
-  - disc03/q1-intro-copy-disc02 #p2
-  - disc03/fa23-mid-q01
   - disc03/q4-employee-database #p3
   - disc03/q2-sports #p4
