--- a/pages/disc/disc04_new.yml
+++ b/pages/disc/disc04_new.yml
@@ -5,19 +5,15 @@ context: >
   Solutions will be made available after all discussion sections have concluded. You don't need to submit your answers anywhere.<br><br><b>Note: We do not plan to cover all problems here in the live discussion section</b>; the problems we don't cover can be used for extra practice.
 show_solution: true
 problems:
-  # Earlier problems
-  - disc03/dsc80-wi23-mid-3 #p1
-  - disc03/dsc10-wi24-quiz2-5 # p2
-  - disc03/dsc10-disc3-4 #p3
-  - disc03/dsc80-sp24-midterm-1 # p4
-  # - disc03/dsc10-wi21-final-5 #p4
-  - disc03/dsc10-fa23-quiz2-2 # p5
-  - disc03/dsc10-fa21-midterm-5 #p6
-  - disc03/dsc10-sp23-midterm-5 #p7
-  - disc03/dsc80-sp22-midterm-7 #p8
-  - disc03/dsc80-wi24-midterm-5 #p9
+  - disc04_new/dsc10-wi24-quiz2-5 # groupby
+  - disc04_new/dsc10-disc3-4 # groupby
+  - disc04_new/dsc10-fa23-quiz2-2 # merge
+  - disc04_new/dsc10-fa21-midterm-5 # merge
+  - disc04_new/dsc80-wi24-midterm-5 # double val counts
+  - disc04_new/dsc10-sp23-midterm-5 # merge
+  - disc04_new/dsc80-sp24-midterm-1 # groupby
+  - disc04_new/dsc80-sp22-midterm-7 # merge
 
-  # Later problems
-  - disc03/dsc80-wi23-midterm-6 #p10
-  - disc03/dsc10-wi24-quiz3-3 #p11
-  - disc03/dsc80-wi23-midterm-5 #p12
+  - disc04_new/dsc80-wi23-midterm-6 
+  - disc04_new/dsc10-wi24-quiz3-3 
+  - disc04_new/dsc80-wi23-midterm-5 
