disc04_new with pivot

--- a/pages/disc/disc04.yml
+++ b/pages/disc/disc04.yml
@@ -16,7 +16,7 @@ problems:
   - disc04/dsc10-sp24-mid-q6
 
   # Later problems
-  - disc04/dsc80-sp22-mid-q3-6
-  - disc04/dsc80-sp22-final-q1
+  # - disc04/dsc80-sp22-mid-q3-6
+  # - disc04/dsc80-sp22-final-q1
   - disc04/dsc80-sp22-final-q2
   - disc04/dsc10-fa22-mid-q7
