--- a/pages/disc/disc04.yml
+++ b/pages/disc/disc04.yml
@@ -1,22 +1,23 @@
-title: "Visualization, Missing Values, More Practice"
+title: "Grouping, Pivoting, and Merging"
 context: >
   The problems in this worksheet are taken from past exams in similar classes. Work on them **on paper**, since the exams you take in this course will also be on paper. 
   <br><br>We encourage you to complete this worksheet in a live discussion section. 
   Solutions will be made available after all discussion sections have concluded. You don't need to submit your answers anywhere.<br><br><b>Note: We do not plan to cover all problems here in the live discussion section</b>; the problems we don't cover can be used for extra practice.
 show_solution: true
 problems:
-  # Earlier problems
-  - disc04/dsc10-wi23-final-q3.3
-  - disc04/dsc10-fa22-mid-q2
-  - disc04/dsc10-fa21-mid-q7
-  - disc04/dsc80-wi24-final-q3
-  - disc04/dsc80-wi24-mid-q6
-  - disc04/dsc80-wi24-final-q1
-  - disc04/dsc80-sp22-mid-q8
-  - disc04/dsc10-sp24-mid-q6
+  - disc04/dsc10-wi24-quiz2-5 # groupby
+  - disc04/dsc10-disc3-4 # groupby
+  - disc04/dsc10-fa23-quiz2-2 # merge
+  - disc04/dsc10-fa21-midterm-5 # merge
 
-  # Later problems
-  # - disc04/dsc80-sp22-mid-q3-6
-  # - disc04/dsc80-sp22-final-q1
-  - disc04/dsc80-sp22-final-q2
-  - disc04/dsc10-fa22-mid-q7
+  - disc04/dsc80-sp22-mid-q3-6 # pivot
+  - disc04/dsc80-wi24-midterm-5 # double val counts
+  - disc04/dsc10-sp23-midterm-5 # merge
+  - disc04/dsc80-sp24-midterm-1 # groupby
+  - disc04/dsc80-sp22-midterm-7 # merge
+
+  - disc04/dsc80-wi23-midterm-6 
+  - disc04/dsc10-wi24-quiz3-3 
+  - disc04/dsc80-wi23-midterm-5 
+  - disc04/dsc80-sp22-final-q1
+
