added mean imputation question

--- a/pages/disc/disc05.yml
+++ b/pages/disc/disc05.yml
@@ -9,6 +9,7 @@ problems:
   - disc05/dsc10-fa22-mid-q2 # vis
   - disc05/dsc80-wi24-final-q3 # conceptual mean imputation
   - disc05/dsc80-wi24-mid-q6
+  - disc05/sp22-final-q05
   # - disc05/dsc80-wi24-final-q1
   # - disc05/dsc80-sp22-mid-q8
   # - disc05/dsc10-sp24-mid-q6
