--- a/pages/disc/disc06.yml
+++ b/pages/disc/disc06.yml
@@ -19,5 +19,5 @@ problems:
   - disc06/dsc80-wi24-final-q07 #p10
   - disc06/dsc80-sp24-final-q09 #p11
   - disc06/dsc80-wi23-final-q06 #p12
-  - disc06/dsc80-fa23-final-q08 #p14
+  - disc06/dsc80-fa23-final-q08 
 
