--- a/pages/disc/disc07.yml
+++ b/pages/disc/disc07.yml
@@ -14,3 +14,11 @@ problems:
   - disc07/dsc40a-wi24-final-pt1-q01 # 15
   - disc07/dsc40a-wi22-midterm1-q01 # 12
   - disc07/dsc40a-sp24-midterm-q03 # Problem 3
+
+  # from linear regression
+  - disc07/fa21-midterm-q04 # 3
+  - disc07/sp24-final-q03 # 1
+  - disc07/sp23-final-pt1-q01
+  - disc07/sp23-midterm1-q04
+
+
