--- a/pages/disc/disc08.yml
+++ b/pages/disc/disc08.yml
@@ -5,16 +5,16 @@ context: >
   Solutions will be made available after all discussion sections have concluded. You don't need to submit your answers anywhere.<br><br><b>Note: We do not plan to cover all problems here in the live discussion section</b>; the problems we don't cover can be used for extra practice.
 show_solution: true
 problems:
-  - disc08/fa21-midterm-q04 # 3
-  - disc08/fa21-final-q05 # 2
-  - disc08/sp24-midterm-q05 # 5
-  - disc08/sp24-final-q03 # 1
-  - disc08/wi22-midterm1-q03 # 4
+  - disc08/fa21-midterm-q04 # 
+  - disc08/fa21-final-q05 # 7
+  - disc08/sp24-midterm-q05 # 
+  - disc08/sp24-final-q03 # 
+  - disc08/wi22-midterm1-q03 # 7
   - disc08/sp23-midterm1-q04
   - disc08/wi24-final-pt1-q04
-  - disc08/wi24-midterm1-q04
-  - disc08/fa22-midterm-q04
-  - disc08/sp23-final-pt1-q01
+  - disc08/wi24-midterm1-q04 # 7
+  - disc08/fa22-midterm-q04 # 7
+  - disc08/sp23-final-pt1-q01 # 7
   - disc08/fa21-final-q06
   - disc08/sp23-midterm1-q05
   - disc08/sp23-final-pt1-q05
