--- a/pages/disc/disc07.yml
+++ b/pages/disc/disc07.yml
@@ -1,4 +1,4 @@
-title: "Summary Statistics and Linear Regression"
+title: "Loss Functions and Simple Linear Regression"
 context: >
   The problems in this worksheet are taken from past exams in similar classes. Work on them **on paper**, since the exams you take in this course will also be on paper. 
   <br><br>We encourage you to complete this worksheet in a live discussion section. 
