disc07 study site

--- a/pages/disc/disc07.yml
+++ b/pages/disc/disc07.yml
@@ -16,7 +16,7 @@ problems:
   - disc07/dsc40a-sp24-final-q01 # 18
   - disc07/dsc40a-wi24-final-pt1-q01 # 15
   - disc07/dsc40a-wi22-midterm1-q01 # 12
-  - disc07/dsc40a-sp24-midterm-q03 # Problem 3
+  - disc07/dsc40a-sp24-midterm-q03 
 
   # from linear regression
   - disc07/sp24-final-q03 # 1
