--- a/pages/review/mt-review-sunday.yml
+++ b/pages/review/mt-review-sunday.yml
@@ -3,7 +3,7 @@ context: >
   The problems in this worksheet are taken from past exams in similar classes. Work on them **on paper**, since the exams you take in this course will also be on paper. 
   <br><br>We encourage you to attempt these problems **before** Sunday's exam review session, so that we have enough time to walk through the solutions to all of the problems.
   <br><br>We will enable the solutions here after the review session, though you can find the written solutions to these problems in other discussion worksheets.
-show_solution: false
+show_solution: true
 problems:
   # Problems
   - mt-review/dsc80-wi24-final-q1 # Good pandas review.
