--- a/pages/disc/disc08.yml
+++ b/pages/disc/disc08.yml
@@ -1,20 +1,20 @@
-title: "Linear Regression"
+title: "Multiple Linear Regression"
 context: >
   The problems in this worksheet are taken from past exams in similar classes. Work on them **on paper**, since the exams you take in this course will also be on paper. 
   <br><br>We encourage you to complete this worksheet in a live discussion section. 
   Solutions will be made available after all discussion sections have concluded. You don't need to submit your answers anywhere.<br><br><b>Note: We do not plan to cover all problems here in the live discussion section</b>; the problems we don't cover can be used for extra practice.
 show_solution: true
 problems:
-  - disc08/fa21-midterm-q04 # 
-  - disc08/fa21-final-q05 # 7
+  # - disc08/fa21-midterm-q04 # 7
+  # - disc08/fa21-final-q05 # 7
   - disc08/sp24-midterm-q05 # 
   - disc08/sp24-final-q03 # 
-  - disc08/wi22-midterm1-q03 # 7
+  # - disc08/wi22-midterm1-q03 # 7
   - disc08/sp23-midterm1-q04
   - disc08/wi24-final-pt1-q04
-  - disc08/wi24-midterm1-q04 # 7
-  - disc08/fa22-midterm-q04 # 7
-  - disc08/sp23-final-pt1-q01 # 7
+  # - disc08/wi24-midterm1-q04 # 7
+  # - disc08/fa22-midterm-q04 # 7
+  # - disc08/sp23-final-pt1-q01 # 7
   - disc08/fa21-final-q06
   - disc08/sp23-midterm1-q05
   - disc08/sp23-final-pt1-q05
