--- a/pages/disc/disc09.yml
+++ b/pages/disc/disc09.yml
@@ -6,13 +6,12 @@ context: >
 show_solution: true
 problems:
   - disc09/fa23-final-q09 # q1
-  - disc09/q06 # q2
   - disc09/sp22-final-q10 # q3
   - disc09/wi22-midterm1-q04 # q9
-  - disc09/wi24-final-q11 # q12
+  # - disc09/wi24-final-q11 # q12
   - disc09/sp23-final-pt1-q05 # q4
   - disc09/sp23-final-pt1-q06 # q5
-  - disc09/sp23-midterm1-q05 # q6
+  # - disc09/sp23-midterm1-q05 # q6
   - disc09/sp24-final-q10 # q7
   # - disc09/sp24-midterm-q04 # q8
   - disc09/wi23-final-q04 # q10
