--- a/pages/disc/disc09.yml
+++ b/pages/disc/disc09.yml
@@ -1,4 +1,4 @@
-title: "Multiple Linear Regression and Feature Engineering"
+title: "Feature Engineering and Generalization"
 context: >
   The problems in this worksheet are taken from past exams in similar classes. Work on them **on paper**, since the exams you take in this course will also be on paper. 
   <br><br>We encourage you to complete this worksheet in a live discussion section. 
@@ -6,13 +6,15 @@ context: >
 show_solution: true
 problems:
   - disc09/fa23-final-q09 # q1
+  - disc09/sp24-final-q10
   - disc09/sp22-final-q10 # q3
-  - disc09/wi22-midterm1-q04 # q9
+  # - disc09/wi22-midterm1-q04 # q9
   # - disc09/wi24-final-q11 # q12
-  - disc09/sp23-final-pt1-q05 # q4
-  - disc09/sp23-final-pt1-q06 # q5
+  # - disc09/sp23-final-pt1-q05 # q4
+  # - disc09/sp23-final-pt1-q06 # q5
   # - disc09/sp23-midterm1-q05 # q6
-  - disc09/sp24-final-q10 # q7
   # - disc09/sp24-midterm-q04 # q8
   - disc09/wi23-final-q04 # q10
+  - disc10/su20-midterm-q04
+  - disc10/wi23-final-q09
   # - disc09/wi23-final-q09 # q11
