--- a/pages/disc/disc09.yml
+++ b/pages/disc/disc09.yml
@@ -5,16 +5,35 @@ context: >
   Solutions will be made available after all discussion sections have concluded. You don't need to submit your answers anywhere.<br><br><b>Note: We do not plan to cover all problems here in the live discussion section</b>; the problems we don't cover can be used for extra practice.
 show_solution: true
 problems:
+  # - disc09/fa23-final-q09 # q1
+  # - disc09/sp24-final-q10
+  # - disc09/sp22-final-q10 # q3
+  # # - disc09/wi22-midterm1-q04 # q9
+  # # - disc09/wi24-final-q11 # q12
+  # # - disc09/sp23-final-pt1-q05 # q4
+  # # - disc09/sp23-final-pt1-q06 # q5
+  # # - disc09/sp23-midterm1-q05 # q6
+  # # - disc09/sp24-midterm-q04 # q8
+  # - disc09/wi23-final-q04 # q10
+  # - disc10/su20-midterm-q04
+  # - disc10/wi23-final-q09
+  # # - disc09/wi23-final-q09 # q11
+
+
+# problem 9 from final
+# 1 --> comment out 1.4 and 1.5
+# 3
+# fall24 final #9
+# 5
+# 6
+# 4
+# 2 --> towards the end, have y variable be in text, not code (like 2.4)
+
   - disc09/fa23-final-q09 # q1
-  - disc09/sp24-final-q10
+  - disc09/q09
   - disc09/sp22-final-q10 # q3
-  # - disc09/wi22-midterm1-q04 # q9
-  # - disc09/wi24-final-q11 # q12
-  # - disc09/sp23-final-pt1-q05 # q4
-  # - disc09/sp23-final-pt1-q06 # q5
-  # - disc09/sp23-midterm1-q05 # q6
-  # - disc09/sp24-midterm-q04 # q8
-  - disc09/wi23-final-q04 # q10
-  - disc10/su20-midterm-q04
-  - disc10/wi23-final-q09
-  # - disc09/wi23-final-q09 # q11
+  - disc10/su20-midterm-q04 # q5
+  - disc10/wi23-final-q09 # q6
+  - disc09/wi23-final-q04 # q4
+  - disc09/sp24-final-q10 # q2
+
