--- a/pages/disc/disc11.yml
+++ b/pages/disc/disc11.yml
@@ -5,20 +5,15 @@ context: >
   Solutions will be made available after all discussion sections have concluded. You don't need to submit your answers anywhere.<br><br><b>Note: We do not plan to cover all problems here in the live discussion section</b>; the problems we don't cover can be used for extra practice.
 show_solution: true
 problems:
-  # - disc10/su20-midterm-q03 # q1
-  - disc11/sp24-final-q05 # q2
-  - disc11/fa21-midterm-q03 # 5
-  - disc11/wi23-final-q02 # 7 (convexity)
-  - disc11/sp21-midterm1-q01 # 3
-  - disc11/sp23-midterm1-q03 # 4 (convexity)
-  - disc11/wi23-final-q03 # 8
-  - disc11/wi24-final-pt1-q03 # 10
-  - disc11/wi24-midterm1-q03 # 11 (convexity)
-  - disc11/fa22-midterm-q01 # 6 (old)
+  - disc11/sp24-final-q05 # 1
+  - disc11/q12
+  - disc12/sp22-final-q12 #10
+  - disc12/wi23-final-q07 #12
+  - disc11/wi24-final-pt1-q03 # 7
+  - disc11/fa22-midterm-q01 # 9 (old)
+  - disc11/fa21-midterm-q03 # 2
+  - disc11/sp21-midterm1-q01 # 4
+  - disc12/fa19-derivative1 #11
+  - disc12/fa23-final-q06 #13
+  - disc12/wi24-final-q09 #15
 
-  - disc12/sp22-final-q12
-  - disc12/fa19-derivative1
-  - disc12/wi23-final-q07
-  - disc12/fa23-final-q06
-  - disc12/sp24-final-q11
-  - disc12/wi24-final-q09 
