--- a/pages/disc/disc12.yml
+++ b/pages/disc/disc12.yml
@@ -1,4 +1,4 @@
-title: Classifier Evaluation and Logistic Regression
+title: Logistic Regression and Clustering
 context: >
   The problems in this worksheet are taken from past exams in similar classes. Work on them **on paper**, since the exams you take in this course will also be on paper. 
   <br><br>We encourage you to complete this worksheet in a live discussion section. 
@@ -6,6 +6,7 @@ context: >
 show_solution: true
 problems:
   # - disc12/sp22-final-q12
+  - disc12/q13
   - disc12/fa19-midterm-q07
   - disc12/fa19-derivative
   # - disc12/wi23-final-q07
@@ -13,3 +14,6 @@ problems:
   # - disc12/sp24-final-q11
   # - disc12/fa23-final-q06
   - disc12/sp24-final-q13
+  - disc12/sp23-midterm2-q05
+  - disc12/sp23-final-pt2-q05
+  - disc12/wi24-final-pt2-q03
