--- a/pages/disc/disc12.yml
+++ b/pages/disc/disc12.yml
@@ -3,17 +3,12 @@ context: >
   The problems in this worksheet are taken from past exams in similar classes. Work on them **on paper**, since the exams you take in this course will also be on paper. 
   <br><br>We encourage you to complete this worksheet in a live discussion section. 
   Solutions will be made available after all discussion sections have concluded. You don't need to submit your answers anywhere.<br><br><b>Note: We do not plan to cover all problems here in the live discussion section</b>; the problems we don't cover can be used for extra practice.
-show_solution: true
+show_solution: false
 problems:
-  # - disc12/sp22-final-q12
   - disc12/fa19-midterm-q07
   - disc12/q13 
-  - disc12/fa19-derivative # 3
-  # - disc12/wi23-final-q07
-  # - disc12/wi24-final-q09 
-  # - disc12/sp24-final-q11
-  # - disc12/fa23-final-q06
-  - disc12/sp24-final-q13 # 4
+  - disc12/fa19-derivative
+  - disc12/sp24-final-q13
 
 
 # 2
@@ -23,3 +18,8 @@ problems:
 # start with 6
 # cut 7
 # does this predict plane or early
+# - disc12/sp22-final-q12
+# - disc12/wi23-final-q07
+# - disc12/wi24-final-q09 
+# - disc12/sp24-final-q11
+# - disc12/fa23-final-q06
