--- a/pages/exams/wn25-midterm.yml
+++ b/pages/exams/wn25-midterm.yml
@@ -2,8 +2,8 @@ title: "Winter 2025 Midterm Exam"
 instructors: Suraj Rampure
 context: >
   This exam was administered in-person. The exam was closed-notes, except students were allowed to bring a single two-sided notes sheet. No calculators were allowed. Students had 120 minutes to take this exam.
-  <br><br>Access the original exam PDF here: <a href="../assets/pdf/wn25-midterm-a.pdf">Version A</a>.
-  show_solution: true
+  <br><br>Access the original exam PDF <a href="../assets/pdf/wn25-midterm.pdf">here</a>.
+show_solution: true
 data_info: wn25-midterm/data
 problems:
   - wn25-midterm/q01
