--- a/pages/disc/disc07.yml
+++ b/pages/disc/disc07.yml
@@ -1,9 +1,7 @@
 title: "Loss Functions and Simple Linear Regression"
 context: >
   The problems in this worksheet are taken from past exams in similar classes. Work on them **on paper**, since the exams you take in this course will also be on paper. 
-  <br><br>We encourage you to complete this worksheet in a live discussion section. 
-  Solutions will be made available after all discussion sections have concluded. You don't need to submit your answers anywhere.<br><br><b>Note: We do not plan to cover all problems here in the live discussion section</b>; the problems we don't cover can be used for extra practice.
-  <br><br>**New**: [**This video 🎥**](https://www.loom.com/share/c35dac2f5e5049619d059a6d0aef446d?sid=daeb1d45-749c-43b9-9d12-c2643ebab056), recorded in office hours, gives an overview of Loss Functions, the Constant Model, Mean, and Variance, while [**this video 🎥**](https://www.loom.com/share/5aa0fcd3ad5946468c5f5d75a4818f11?sid=b8ac8b4c-2da9-4132-98fb-b40ee7bd6822) overviews Simple Linear Regression.
+  <br><br>[**This video 🎥**](https://www.loom.com/share/c35dac2f5e5049619d059a6d0aef446d?sid=daeb1d45-749c-43b9-9d12-c2643ebab056), recorded in office hours, gives an overview of Loss Functions, the Constant Model, Mean, and Variance, while [**this video 🎥**](https://www.loom.com/share/5aa0fcd3ad5946468c5f5d75a4818f11?sid=b8ac8b4c-2da9-4132-98fb-b40ee7bd6822) overviews Simple Linear Regression.
 show_solution: true
 problems:
   - disc07/dsc40a-fa21-midterm-q01
