--- a/pages/exams/fa24-final.yml
+++ b/pages/exams/fa24-final.yml
@@ -6,11 +6,11 @@ context: >
 
   <br>
 
-  **Note**: The Fall 2024 Final Exam was cumulative, but the Winter 2025 Final Exam will not be cumulative.
+  **Note**: The Fall 2024 Final Exam was cumulative, but the Spring 2025 Final Exam will not be cumulative.
 
   <ul>
-  <li>Winter 2025 Final Exam questions will look more like Questions 8.3-15.</li>
-  <li>Questions 1-8.2 are in scope for the Winter 2025 Midterm Exam (except for Question 2, about SQL).</li>
+  <li>Spring 2025 Final Exam questions will look more like Questions 8.3-15.</li>
+  <li>Questions 1-8.2 are in scope for the Spring 2025 Midterm Exam (except for Question 2, about SQL).</li>
   </ul>
 
 show_solution: true 
