--- a/pages/exams/fa24-midterm.yml
+++ b/pages/exams/fa24-midterm.yml
@@ -3,7 +3,7 @@ instructors: Suraj Rampure
 context: >
   This exam was administered in-person. The exam was closed-notes, except students were allowed to bring a single two-sided notes sheet. No calculators were allowed. Students had 120 minutes to take this exam.
   <br><br>Access the original exam PDF here: <a href="../assets/pdf/fa24-midterm-a.pdf">Version A</a>, <a href="../assets/pdf/fa24-midterm-b.pdf">Version B</a>. (This site is based on Version A.)
-  <br><br>Note that for the Winter 2025 Midterm Exam, all of the questions here (except Question 10 on SQL) are in scope, but there are a few questions from the <a href="https://study.practicaldsc.org/fa24-final/index.html">Fall 2024 Final Exam</a> that
+  <br><br>Note that for the Spring 2025 Midterm Exam, all of the questions here (except Question 10 on SQL) are in scope, but there are a few questions from the <a href="https://study.practicaldsc.org/fa24-final/index.html">Fall 2024 Final Exam</a> that
   are also in scope that cover topics that aren't here (like loss functions and regression). See the top of that exam for more details.
 show_solution: true
 data_info: fa24-midterm/data-info
